# mahou

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ddg.cpp  halfedge.cpp  intersect.cpp  log.hpp  mesh.cpp  normal.cpp  octree.cpp  sdf.cpp  triangulation.cpp
src/core/include/mahou/: ddg.h  ddg.hpp  halfedge.h  intersect.h  mesh.h  normal.h  octree.h  sdf.h  triangulate.h  types.hpp
src/hou/: CMakeLists.txt  SOP_measure.cpp  SOP_measure.h  SOP_sdf.cpp  SOP_sdf.h  helper.hpp  initialize.cpp
src/include/mahou/: gradient.hpp
src/test/: CMakeLists.txt  test_halfedge.cpp  test_interesect.cpp  test_octree.cpp  test_sdf.cpp
